Fixing dark mode background bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -43,6 +43,7 @@
 	color-scheme: dark;
 }
 
+html,
 body {
 	background: var(--background);
 	color: var(--foreground);
